--- a/src/main/webapp/changePassword.xhtml
+++ b/src/main/webapp/changePassword.xhtml
@@ -18,7 +18,7 @@
   <ui:define name="content">
     <h1>#{msgs.changePassword}</h1>
 
-    <h:messages globalOnly="true" style="margin-bottom:1rem; color:#c00" />
+    <h:messages globalOnly="true" showDetail="true" style="margin-bottom:1rem; color:#c00" />
 
     <h:form id="changePwForm">
       <div class="form-row">
