--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -15,7 +15,7 @@
       
       <h:form id="loginForm">
 
-        <h:messages globalOnly="true" style="color: red; margin-bottom: 1em;" />
+        <h:messages globalOnly="true" showDetail="true" style="color: red; margin-bottom: 1em;" />
 
         <div class="form-row">
           <label for="user">#{msgs.Username}</label>
