--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -29,7 +29,7 @@
     <section>
       <h2 class="section-title">#{msgs.dashboardSectionTitle}</h2>
 
-      <h:messages globalOnly="true" style="margin-bottom:1rem; color:#c00" />
+      <h:messages globalOnly="true" showDetail="true" style="margin-bottom:1rem; color:#c00" />
 
       <h:form id="tsListForm">
         <section class="timesheet-section">
